test/data/resolver/valid/set_labels_declared.cypher
MATCH (n:Person) SET n:Draft RETURN n
