test/data/resolver/invalid/unknown_label.cypher
MATCH (n:NotDeclared) RETURN n
